pg/esp_learn/p4/wifi/fast_scan/build/log/idf_py_stdout_output_154226
Command: ninja all
[1/14] Linking C static library esp-idf/esp_pm/libesp_pm.a
[2/14] Linking C static library esp-idf/esp_timer/libesp_timer.a
[3/14] Performing build step for 'bootloader'
[1/1] cd /home/chao/Workspace/esp_learn/p4/wifi/fast_scan/build/bootloader/esp-idf/esptool_py && /home/chao/.espressif/python_env/idf6.0_py3.12_env/bin/python /home/chao/esp/master/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x2000 /home/chao/Workspace/esp_learn/p4/wifi/fast_scan/build/bootloader/bootloader.bin
Bootloader binary size 0x5760 bytes. 0x8a0 bytes (9%) free.
[4/14] No install step for 'bootloader'
[5/14] Linking C static library esp-idf/esp_driver_gpio/libesp_driver_gpio.a
[6/14] Completed 'bootloader'
[7/14] Linking C static library esp-idf/riscv/libriscv.a
[8/14] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/fast_scan.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/fast_scan.c.obj 
/home/chao/.espressif/tools/riscv32-esp-elf/esp-14.2.0_20241119/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5-dev-3618-g7f6e7f4506\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/chao/Workspace/esp_learn/p4/wifi/fast_scan/build/config -I/home/chao/Workspace/esp_learn/p4/wifi/fast_scan/main -I/home/chao/esp/master/esp-idf/components/newlib/platform_include -I/home/chao/esp/master/esp-idf/components/freertos/config/include -I/home/chao/esp/master/esp-idf/components/freertos/config/include/freertos -I/home/chao/esp/master/esp-idf/components/freertos/config/riscv/include -I/home/chao/esp/master/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/chao/esp/master/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/chao/esp/master/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/home/chao/esp/master/esp-idf/components/freertos/esp_additions/include -I/home/chao/esp/master/esp-idf/components/esp_hw_support/include -I/home/chao/esp/master/esp-idf/components/esp_hw_support/include/soc -I/home/chao/esp/master/esp-idf/components/esp_hw_support/include/soc/esp32p4 -I/home/chao/esp/master/esp-idf/components/esp_hw_support/dma/include -I/home/chao/esp/master/esp-idf/components/esp_hw_support/ldo/include -I/home/chao/esp/master/esp-idf/components/esp_hw_support/debug_probe/include -I/home/chao/esp/master/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/chao/esp/master/esp-idf/components/esp_hw_support/power_supply/include -I/home/chao/esp/master/esp-idf/components/esp_hw_support/port/esp32p4/. -I/home/chao/esp/master/esp-idf/components/esp_hw_support/port/esp32p4/include -I/home/chao/esp/master/esp-idf/components/esp_hw_support/port/esp32p4/private_include -I/home/chao/esp/master/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32p4/. -I/home/chao/esp/master/esp-idf/components/heap/include -I/home/chao/esp/master/esp-idf/components/heap/tlsf -I/home/chao/esp/master/esp-idf/components/log/include -I/home/chao/esp/master/esp-idf/components/soc/include -I/home/chao/esp/master/esp-idf/components/soc/esp32p4 -I/home/chao/esp/master/esp-idf/components/soc/esp32p4/include -I/home/chao/esp/master/esp-idf/components/soc/esp32p4/register -I/home/chao/esp/master/esp-idf/components/hal/platform_port/include -I/home/chao/esp/master/esp-idf/components/hal/esp32p4/include -I/home/chao/esp/master/esp-idf/components/hal/include -I/home/chao/esp/master/esp-idf/components/esp_rom/include -I/home/chao/esp/master/esp-idf/components/esp_rom/esp32p4/include -I/home/chao/esp/master/esp-idf/components/esp_rom/esp32p4/include/esp32p4 -I/home/chao/esp/master/esp-idf/components/esp_rom/esp32p4 -I/home/chao/esp/master/esp-idf/components/esp_common/include -I/home/chao/esp/master/esp-idf/components/esp_system/include -I/home/chao/esp/master/esp-idf/components/esp_system/port/soc -I/home/chao/esp/master/esp-idf/components/esp_system/port/include/riscv -I/home/chao/esp/master/esp-idf/components/esp_system/port/include/private -I/home/chao/esp/master/esp-idf/components/riscv/include -I/home/chao/esp/master/esp-idf/components/lwip/include -I/home/chao/esp/master/esp-idf/components/lwip/include/apps -I/home/chao/esp/master/esp-idf/components/lwip/include/apps/sntp -I/home/chao/esp/master/esp-idf/components/lwip/lwip/src/include -I/home/chao/esp/master/esp-idf/components/lwip/port/include -I/home/chao/esp/master/esp-idf/components/lwip/port/freertos/include -I/home/chao/esp/master/esp-idf/components/lwip/port/esp32xx/include -I/home/chao/esp/master/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/chao/esp/master/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/chao/esp/master/esp-idf/components/esp_wifi/include -I/home/chao/esp/master/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/chao/esp/master/esp-idf/components/esp_event/include -I/home/chao/esp/master/esp-idf/components/esp_netif/include -I/home/chao/esp/master/esp-idf/components/nvs_flash/include -I/home/chao/esp/master/esp-idf/components/esp_partition/include -march=rv32imafc_zicsr_zifencei_xesppie -mabi=ilp32f  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/home/chao/Workspace/esp_learn/p4/wifi/fast_scan=. -fmacro-prefix-map=/home/chao/esp/master/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/fast_scan.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/fast_scan.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/fast_scan.c.obj -c /home/chao/Workspace/esp_learn/p4/wifi/fast_scan/main/fast_scan.c
In file included from /home/chao/Workspace/esp_learn/p4/wifi/fast_scan/main/fast_scan.c:26:
/home/chao/Workspace/esp_learn/p4/wifi/fast_scan/main/fast_scan.c: In function 'fast_scan':
/home/chao/esp/master/esp-idf/components/esp_wifi/include/esp_wifi.h:311:26: error: 'CONFIG_ESP_WIFI_STATIC_RX_BUFFER_NUM' undeclared (first use in this function); did you mean 'WIFI_STATIC_TX_BUFFER_NUM'?
  311 |     .static_rx_buf_num = CONFIG_ESP_WIFI_STATIC_RX_BUFFER_NUM,\
      |                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/chao/Workspace/esp_learn/p4/wifi/fast_scan/main/fast_scan.c:97:30: note: in expansion of macro 'WIFI_INIT_CONFIG_DEFAULT'
   97 |     wifi_init_config_t cfg = WIFI_INIT_CONFIG_DEFAULT();
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~
/home/chao/esp/master/esp-idf/components/esp_wifi/include/esp_wifi.h:311:26: note: each undeclared identifier is reported only once for each function it appears in
  311 |     .static_rx_buf_num = CONFIG_ESP_WIFI_STATIC_RX_BUFFER_NUM,\
      |                          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/chao/Workspace/esp_learn/p4/wifi/fast_scan/main/fast_scan.c:97:30: note: in expansion of macro 'WIFI_INIT_CONFIG_DEFAULT'
   97 |     wifi_init_config_t cfg = WIFI_INIT_CONFIG_DEFAULT();
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~
/home/chao/esp/master/esp-idf/components/esp_wifi/include/esp_wifi.h:312:27: error: 'CONFIG_ESP_WIFI_DYNAMIC_RX_BUFFER_NUM' undeclared (first use in this function); did you mean 'WIFI_DYNAMIC_TX_BUFFER_NUM'?
  312 |     .dynamic_rx_buf_num = CONFIG_ESP_WIFI_DYNAMIC_RX_BUFFER_NUM,\
      |                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/chao/Workspace/esp_learn/p4/wifi/fast_scan/main/fast_scan.c:97:30: note: in expansion of macro 'WIFI_INIT_CONFIG_DEFAULT'
   97 |     wifi_init_config_t cfg = WIFI_INIT_CONFIG_DEFAULT();
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~
/home/chao/esp/master/esp-idf/components/esp_wifi/include/esp_wifi.h:313:20: error: 'CONFIG_ESP_WIFI_TX_BUFFER_TYPE' undeclared (first use in this function)
  313 |     .tx_buf_type = CONFIG_ESP_WIFI_TX_BUFFER_TYPE,\
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/chao/Workspace/esp_learn/p4/wifi/fast_scan/main/fast_scan.c:97:30: note: in expansion of macro 'WIFI_INIT_CONFIG_DEFAULT'
   97 |     wifi_init_config_t cfg = WIFI_INIT_CONFIG_DEFAULT();
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~
/home/chao/esp/master/esp-idf/components/esp_wifi/include/esp_wifi.h:316:25: error: 'CONFIG_ESP_WIFI_DYNAMIC_RX_MGMT_BUF' undeclared (first use in this function)
  316 |     .rx_mgmt_buf_type = CONFIG_ESP_WIFI_DYNAMIC_RX_MGMT_BUF,\
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/chao/Workspace/esp_learn/p4/wifi/fast_scan/main/fast_scan.c:97:30: note: in expansion of macro 'WIFI_INIT_CONFIG_DEFAULT'
   97 |     wifi_init_config_t cfg = WIFI_INIT_CONFIG_DEFAULT();
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~
/home/chao/esp/master/esp-idf/components/esp_wifi/include/esp_wifi.h:331:31: error: 'CONFIG_ESP_WIFI_ESPNOW_MAX_ENCRYPT_NUM' undeclared (first use in this function)
  331 |     .espnow_max_encrypt_num = CONFIG_ESP_WIFI_ESPNOW_MAX_ENCRYPT_NUM, \
      |                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/chao/Workspace/esp_learn/p4/wifi/fast_scan/main/fast_scan.c:97:30: note: in expansion of macro 'WIFI_INIT_CONFIG_DEFAULT'
   97 |     wifi_init_config_t cfg = WIFI_INIT_CONFIG_DEFAULT();
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
